welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: ')' expected but ';' found.
 	  remplirTableau(tab;0);
                            ^Array1:5: error: ';' expected but ')' found.
 	  remplirTableau(tab;0);
                              ^Array1:12: error: ')' expected but ';' found.
def remplirTableau(t:Array[Color];x:int){
                                 ^Array1:12: error: ';' expected but ')' found.
def remplirTableau(t:Array[Color];x:int){
                                       ^